2257
Or this:
```scala
scala> def foo[A](a: A): Array[A] = Array(a)
<console>:4: error: could not find implicit value for evidence parameter of type scala.reflect.ClassManifest[A]
       def foo[A](a: A): Array[A] = Array(a)
                                         ^
```
